# gest

./: CLAUDE.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
app/: data.py  main.py
app/pages/: colocalisation.py  credible_set.py  l2g_prediction.py  study.py  variant.py
src/gest/: __init__.py  cli.py
src/gest/sql/colocalisation/: __init__.py  number_of_significant_clpp.sql  number_of_significant_clpp_per_study_type.sql  number_of_significant_h4.sql  number_of_significant_h4_per_study_type.sql  number_of_unique_pairs_significant_clpp.sql  number_of_unique_pairs_significant_clpp_per_study_type.sql  number_of_unique_pairs_significant_h4.sql  number_of_unique_pairs_significant_h4_per_study_type.sql  total_count_of_colocalisations.sql
src/gest/sql/credible_set/: __init__.py  locus_size_stats.sql  number_of_credible_sets.sql  number_of_credible_sets_per_project.sql  number_of_credible_sets_per_study_type.sql  total_count_of_credible_sets.sql  unique_lead_variants_per_project.sql  unique_lead_variants_per_study_type.sql
src/gest/sql/l2g_prediction/: __init__.py  gene_count_per_study_locus.sql  number_of_significant_predictions.sql  total_count_of_predictions.sql
src/gest/sql/study/: __init__.py  number_of_gwas_studies_per_therapeutic_area.sql  number_of_qtl_studies_per_gene.sql  number_of_studies.sql  number_of_studies_per_project.sql  (+2 more)
tests/: conftest.py  test_app_data.py  test_cli.py  test_core.py
tests/test_sql/: test_colocalisation.py  test_credible_set.py  test_l2g_prediction.py  test_study.py  test_variant.py
(+4 files in other folders)
