[project]
name = "gest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.1",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "patito>=0.8.6",
    "plotly>=6.6.0",
    "pydantic>=2.12.5",
    "returns>=0.26.0",
    "streamlit>=1.55.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
